--- a/Uncrowded Prototype/location.css
+++ b/Uncrowded Prototype/location.css
@@ -72,7 +72,7 @@ html, body
 	border-top: 6px solid #b5a268;
 	border-left: 6px solid #b5a268;
 	border-right: 6px solid #b5a268;
-	border-bottom: 6px solid #b5a268;
+	border-bottom: 0px solid #b5a268;
 }
 
 body 
@@ -105,14 +105,52 @@ body
 	height: 100%;
 }
 
-.locationButton a
+.locationBody
 {
+	height: 40vh;
+	display: flex;
+	flex-direction: row;
+	flex: 1;
+}
+
+.locationBodyLeft
+{
+	font-family: Verdana, Geneva, sans-serif;
 	color: white;
+	width: 100%;
+	background: #295136;
+	border-top: 6px solid #b5a268;
+	border-left: 6px solid #b5a268;
+	border-right: 4px solid #b5a268;
+	border-bottom: 0px solid #b5a268;
+}
+
+.locationBodyRight
+{
+	display: flex;
+	background-color: #016938;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	
+	background: #295136;
+	border-top: 6px solid #b5a268;
+	border-left: 4px solid #b5a268;
+	border-right: 6px solid #b5a268;
+	border-bottom: 0px solid #b5a268;
+}
+
+.union
+{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 
 .location
 {
-	height: 20vh;
+	height: 40vh;
 	display: flex;
 	flex-direction: row;
 	flex: 1;
@@ -124,12 +162,18 @@ body
 	color: white;
 	width: 100%;
 	text-align: center;
-	list-style-position: inside;
+	list-style-position: inside;	
 	background: #295136;
 	border-top: 6px solid #b5a268;
 	border-left: 6px solid #b5a268;
 	border-right: 4px solid #b5a268;
 	border-bottom: 0px solid #b5a268;
+}
+
+.locationButton a
+{
+	font-size: 3vh;
+	color: white;
 }
 
 .locationPic
