--- a/Uncrowded Prototype/map.css
+++ b/Uncrowded Prototype/map.css
@@ -105,6 +105,22 @@ body
 	height: 100%;
 }
 
+#legend 
+{
+    font-family: Arial, sans-serif;
+    background: #fff;
+    padding: 10px;
+    margin: 10px;
+    border: 3px solid #000;
+}
+#legend h3 {
+	margin-top: 0;
+}
+#legend svg {
+	vertical-align: middle;
+}
+
+
 .locationButton a
 {
 	color: white;
