--- a/Uncrowded Prototype/map.css
+++ b/Uncrowded Prototype/map.css
@@ -112,14 +112,11 @@ body
     padding: 10px;
     margin: 10px;
     border: 3px solid #000;
+    text-align: left;
 }
 #legend h3 {
 	margin-top: 0;
 }
-#legend svg {
-	vertical-align: middle;
-}
-
 
 .locationButton a
 {
